调整结果